@@ -6,6 +6,7 @@ plugins {
   id 'com.github.ben-manes.versions' version '0.52.0'
   id 'org.sonarqube' version '6.1.0.5360'
   id 'uk.gov.hmcts.java' version '0.12.66'
+  id 'io.freefair.lombok' version '8.13.1'
 }
 
 application {
@@ -36,6 +37,7 @@ tasks.withType(Test).configureEach {
 
   testLogging {
     exceptionFormat = 'full'
+    jvmArgs '-Djava.security.manager=allow'
   }
 }
 
@@ -83,11 +85,14 @@ repositories {
 
 dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
+  implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.17.0'
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '4.2.1'
 
   implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '6.1.9'
 
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
-  testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '5.5.1'
+  testImplementation group: 'com.github.stefanbirkner', name: 'system-lambda', version: '1.2.1'
+  testImplementation group: 'io.github.hakky54', name: 'logcaptor', version: '2.11.0'
 }
 
 bootJar {
